# poetry2nix-v2

./: 404.html  FAQ.html  HACKING.html  basic.html  flake.nix  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: nix-github-actions.yml
doc/: book.toml  default.nix
doc/src/: HACKING.md
lib/: default.nix  lock.nix  metadata2.html  metadata2.nix  overlay.html  overlay.nix  sources.html  sources.nix  test.nix  test_lock.nix  test_metadata2.nix  test_overlay.nix  test_sources.nix
lib/expected/: metadata2.filterPackage.testSimple.json  metadata2.filterPackage.testWithMarker.json  metadata2.resolveDependencies.testMultiChoiceNestedDependent.json  metadata2.resolveDependencies.testSimple.json  metadata2.resolveDependencies.testWithMarker.json  mkPackage.testPackage.json  mkPackage.testSimple.json  mkPackage.testWithMarker.json  parsePackage.testExtras.json  parsePackage.testMultiChoicePackage.json  parsePackage.testPackage.json  parsePackage.testURLSource.json  parsePackage.testWithMarker.json  partitionFiles.testSimple.json  sources.testExplicit.json  sources.testPrimary.json  sources.testSupplemental.json
lib/fixtures/extras-dependency-list/: pyproject.toml
lib/fixtures/kitchen-sink/a/: pyproject.toml  pyproject.tpl.toml
lib/fixtures/multi-choice-nested/dependent-package/: pyproject.toml
lib/fixtures/multi-choice-nested/multi-choice-package/: pyproject.toml
lib/fixtures/multi-choice-package/: pyproject.toml
lib/fixtures/package-sources/explicit/: pyproject.toml
lib/fixtures/package-sources/primary/: pyproject.toml
lib/fixtures/package-sources/supplemental/: pyproject.toml
lib/fixtures/simple/: pyproject.toml
lib/fixtures/trivial/: pyproject.toml
lib/fixtures/with-marker/: pyproject.toml
