[tool.poetry]
name = "multi-choice-package"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# This example is taken from https://github.com/nix-community/poetry2nix/issues/1282.
# Arpeggio is used as a test because it doesn't have any dependencies of it's own, keeping the test small.
arpeggio = [
  {version = "2.0.1", optional = true, markers = "platform_release == '5.10.65'"},
  {version = "2.0.2", optional = true, markers = "platform_release == '5.10.104'"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
