# This pyproject.toml contains every valid way to specify a dependency except overriden repositories which is tested separately.
[tool.poetry]
name = "a"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# Simple named requirement
requests = "*"

# URL requirement (wheel)
arpeggio = { url = "https://files.pythonhosted.org/packages/f7/4f/d28bf30a19d4649b40b501d531b44e73afada99044df100380fd9567e92f/Arpeggio-2.0.2-py2.py3-none-any.whl" }

# URL requirement (sdist)
blinker = { url = "https://files.pythonhosted.org/packages/e8/f9/a05287f3d5c54d20f51a235ace01f50620984bc7ca5ceee781dc645211c5/blinker-1.6.2.tar.gz" }

# URL requirement (git)
pip = { git = "https://github.com/pypa/pip.git", tag = "20.3.1" }

# Local dependency (path)
b = { path = "../b/" }

# Local dependency (path, editable)
c = { path = "../c-editable", develop = true }

# Local dependency (sdist)
attrs = { path = "../attrs-23.1.0.tar.gz" }

# Egg
pyasn1-modules = { url = "https://files.pythonhosted.org/packages/0b/67/c53ba0c386e1eaa3a9aa7937356d845fa7b22df0b6f9e54122fca594f6cd/pyasn1_modules-0.2.8-py3.7.egg" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
