[tool.poetry]
name = "primary-package-sources"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arpeggio = "^2.0.2"

[[tool.poetry.source]]
name = "foo"
url = "https://foo.bar/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
